Refactoring: using CameraX, Tab Layout with Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="close">Close</string>
     <string name="privacyTitle">Data Privacy Statement</string>
     <string name="contactTitle">Help and Contact</string>
+    <string name="info_title">Info</string>
+    <string name="camera">Camera</string>
 </resources>
