Added History tab supported by Room database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="contactTitle">Help and Contact</string>
     <string name="info_title">Info</string>
     <string name="camera">Camera</string>
+    <string name="history_title">History</string>
 </resources>
