Changed to a TFLite model trained on the Open Images data set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="info_title">Info</string>
     <string name="camera">Camera</string>
     <string name="history_title">History</string>
+    <string name="error_quiz_creation">Error while creating quiz</string>
 </resources>
