--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="show_answer">Show answer</string>
     <string name="start">Start</string>
     <string name="preferences_title">Settings</string>
+    <string name="settings">Settings</string>
+    <string name="correct">Correct</string>
+    <string name="incorrect">Wrong answer</string>
 </resources>
